@@ -9,8 +9,15 @@ import in.group.billingsoftware.service.CategoryService;
 import in.group.billingsoftware.service.FileUploadService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.util.StringUtils;
 import org.springframework.web.multipart.MultipartFile;
+import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
+import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.nio.file.StandardCopyOption;
 import java.util.List;
 import java.util.UUID;
 import java.util.stream.Collectors;
@@ -23,10 +30,15 @@ public class CategoryServiceImpl implements CategoryService {
     private final FileUploadService fileUploadService;
     private final ItemRepository itemRepository;
 
-    @Override
-    public CategoryResponse add(CategoryRequest request, MultipartFile file) {
-        String imgUrl = fileUploadService.uploadFile(file);
-        CategoryEntity newCategory =  convertToEntity(request);
+    public CategoryResponse add(CategoryRequest request, MultipartFile file) throws IOException {
+        //String imgUrl = fileUploadService.uploadFile(file);
+        String fileName = UUID.randomUUID().toString()+"."+StringUtils.getFilenameExtension(file.getOriginalFilename());
+        Path uploadPath = Paths.get("uploads").toAbsolutePath().normalize();
+        Files.createDirectories(uploadPath);
+        Path targetLocation = uploadPath.resolve(fileName);
+        Files.copy(file.getInputStream(), targetLocation, StandardCopyOption.REPLACE_EXISTING);
+        String imgUrl = "http://localhost:8080/api/v1.0/uploads/"+fileName;
+        CategoryEntity newCategory = convertToEntity(request);
         newCategory.setImgUrl(imgUrl);
         newCategory = categoryRepository.save(newCategory);
         return convertToResponse(newCategory);
@@ -37,19 +49,28 @@ public class CategoryServiceImpl implements CategoryService {
         return categoryRepository.findAll()
                 .stream()
                 .map(categoryEntity -> convertToResponse(categoryEntity))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
     public void delete(String categoryId) {
-        CategoryEntity existingCategory =  categoryRepository.findByCategoryId(categoryId)
-                .orElseThrow(() -> new RuntimeException("Category not found: " + categoryId));
-        fileUploadService.deleteFile(existingCategory.getImgUrl());
+        CategoryEntity existingCategory = categoryRepository.findByCategoryId(categoryId)
+                .orElseThrow(() -> new RuntimeException("Category not found: "+categoryId));
+        //fileUploadService.deleteFile(existingCategory.getImgUrl());
+        String imgUrl = existingCategory.getImgUrl();
+        String fileName = imgUrl.substring(imgUrl.lastIndexOf("/")+1);
+        Path uploadPath = Paths.get("uploads").toAbsolutePath().normalize();
+        Path filePath = uploadPath.resolve(fileName);
+        try {
+            Files.deleteIfExists(filePath);
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
         categoryRepository.delete(existingCategory);
     }
 
     private CategoryResponse convertToResponse(CategoryEntity newCategory) {
-        Integer itemCount = itemRepository.countByCategoryId(newCategory.getId());
+        Integer itemsCount = itemRepository.countByCategoryId(newCategory.getId());
         return CategoryResponse.builder()
                 .categoryId(newCategory.getCategoryId())
                 .name(newCategory.getName())
@@ -58,7 +79,7 @@ public class CategoryServiceImpl implements CategoryService {
                 .imgUrl(newCategory.getImgUrl())
                 .createdAt(newCategory.getCreatedAt())
                 .updatedAt(newCategory.getUpdatedAt())
-                .items(itemCount)
+                .items(itemsCount)
                 .build();
     }
 
